syntax = "proto3";

package ai.server;

import "ai/models.proto";
import "keyval.proto"; 
import "client.proto";
import "similarity.proto";
import "shared/info.proto";

// TODO storeupsert and serverinfo needs to be imported from db


message Unit {}

message Pong {}

message ClientList {
    repeated client.ConnectedClient clients = 1;
}

message StoreList {
    repeated AIStoreInfo stores = 1;
}

message InfoServer {
    shared.info.ServerInfo info = 1;
}

message Set {
    shared.info.StoreUpsert upsert = 1;
}

message GetEntry {
    keyval.StoreInput key = 1;
    keyval.StoreValue value = 2;
}

message Get {
    repeated GetEntry entries = 1;
}

message GetSimNEntry {
    optional keyval.StoreInput key = 1;
    keyval.StoreValue value = 2;
    similarity.Similarity similarity = 3;
}

message GetSimN {
    repeated GetSimNEntry entries = 1;
}

message Del {
    uint32 deleted_count = 1;
}

message CreateIndex {
    uint32 created_indexes = 1;
}



message AIStoreInfo {
    string name = 1;
    ai.models.AIModel query_model = 2;
    ai.models.AIModel index_model = 3;
    uint32 embedding_size = 4;
}


